fix: correct spacing in figure

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,9 +22,9 @@ body {
 	background-image: linear-gradient(-20deg, #ed6ea0 0%, #ec8c69 100%);
 	background-attachment: fixed;
 }
-	@media(min-width: 700px) {
+	@media(min-width: 800px) {
 		body {
-			padding: 3em 0;
+			padding: 2em 0;
 		}
 	}
 
@@ -56,7 +56,7 @@ CONTAINER
 }
 
 .container.card {
-	width: 95%;
+	width: calc(100% - 2em);
 }
 	@media(min-width: 800px) {
 		.container.card {
@@ -66,8 +66,13 @@ CONTAINER
 	}
 
 .container.article {
-	width: 95%;
+	width: calc(100% - 2em);
 }
+	@media(min-width: 800px) {
+		.container.article {
+			width: calc(100% - 3em);
+		}
+	}
 
 /****
 HEADER
@@ -193,38 +198,44 @@ article .intro {
 	border: 1px solid currentColor;
 }
 
-article figure {
-	display: flex;
-	flex-direction: column;
-	margin: 1em 0;
-	padding: 1em 0;
-	max-width: 100%;
-	background-color: rgba(0,0,0,0.05);
-}
-
 article .intro figure {
 	margin: 1em;
 	background: none;
 }
 
-article figure.two {
-	flex-direction: row;
-}
-
-article figure.two img {
-	/* float: left; */
-	width: 50%;
-	margin-bottom: 0.4em;
+article figure {
+	display: flex;
+	flex-direction: column;
+	margin: 1em 0;
+	max-width: 100%;
+	background-color: rgba(0,0,0,0.05);
 }
 
 article figure img {
-	max-width: 90%;
-	margin: 1em auto;
+	width: 100%;
+	margin: auto;
+	padding: 1em 1em 0 1em;
+}
+
+article .two img {
+	max-width: calc(50% - 1.15em);
+	padding-top: 1em;
+	padding-bottom: 0;
+}
+
+article .two img:first-of-type {
+	padding-right: 0.5em;
+	padding-left: 0;
+}
+
+article .two img:last-of-type {
+	padding-left: 0.5em;
+	padding-right: 0;
 }
 
 article figcaption {
-	width: 95%;
-	margin: auto;
+	width: calc(100% - 2.5em);
+	margin: 1em auto;
 	background-color: rgba(0,0,0,0.1);
 	padding: 0.5em;
 	text-align: center;
